# cc-session-core

./: .gitignore  .mcp.json  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
commands/: session-export.md
src/cc_session_core/: __init__.py  models.py  session.py  types.py
src/cc_session_core/cost/: ledger.py  pricing.py
src/cc_session_core/interface/: cli.py  mcp.py
src/cc_session_core/parsing/: parse.py  tail.py  tools.py
src/cc_session_core/report/: audit.py  contextmap.py  export.py  investigation.py  render.py  views.py
tests/: _extract_fixtures.py  conftest.py  test_attachments.py  test_audit.py  test_contextmap.py  test_corpus.py  test_export.py  test_investigation.py  test_ledger.py  test_pricing.py  test_records.py  test_session.py  test_tail.py  test_tool_result_text.py  test_tools.py
tests/fixtures/: attachments.jsonl  records.jsonl  tool_inputs.json  tool_results.json
