[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-session-core"
version = "0.1.0"
description = "Typed, exhaustive parser for Claude Code session transcripts (.jsonl), plus a context-map tool."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Magic-Man-us" }]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.11"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/Magic-Man-us/cc-session-core"
Issues = "https://github.com/Magic-Man-us/cc-session-core/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
cc-session-map = "cc_session_core.report.contextmap:main"
cc-session = "cc_session_core.interface.cli:main"
cc-session-mcp = "cc_session_core.interface.mcp:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=7.1.0", "ruff>=0.6", "pyright>=1.1.390", "mcp>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/cc_session_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "corpus: runs against a real transcript corpus (set CC_SESSION_CORPUS); slow",
]

[tool.coverage.run]
source = ["cc_session_core"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]
